Fix column spacing

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,7 +5,7 @@ body {
 header {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   height: 85px;
   width: 100%;
   position: fixed;
